# hospital_pipeline

./: README.md  pyproject.toml
src/cloud/: cloud_connection.py
src/contracts/: schema.py
src/controllers/: controller.py
src/data_source/: csv_data_source.py
src/database/: db_connection.py  db_model.py
